--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ body {
     font-size: 1.4rem;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/francesco-ungaro-GUq7shfDhYw-unsplash.jpg");
+    background-image: url("../assets/francesco-ungaro-GUq7shfDhYw-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
