--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ body {
     font-size: 1.4rem;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/https://francesco-ungaro-GUq7shfDhYw-unsplash.jpg");
+    background-image: url("https://images.unsplash.com/photo-1558016183-68d5d7b8851b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
     background-repeat: no-repeat;
     background-size: cover;
 
